--- a/config/database.yml
+++ b/config/database.yml
@@ -11,10 +11,10 @@ default: &default
 
 development:
   username: root
-  password: root
+  password: nikhil
   adapter: mysql2
   database: google_map_demo
-  
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
